# rosbag_to_csv

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
launch/: rosbag_to_csv_gui.launch.py  rosbag_to_csv_plot.launch.py
rosbag_to_csv/: cli.py  dump.py  flatten.py  gui.py  plot_gui.py
